--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,7 +28,7 @@
     <string name="equalizer">均衡器</string>
     <string name="search">搜索</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <!--文件夹菜单界面中indicator内的内容-->
+    <string name="internal_storage">内部存储设备</string>
 
 </resources>
